we can successfully build azure-keyvault-keys, still running into issues attempting to parse the dynamic value tho

--- a/tools/azure-sdk-tools/tests/integration/scenarios/pyproject_project_def/pyproject.toml
+++ b/tools/azure-sdk-tools/tests/integration/scenarios/pyproject_project_def/pyproject.toml
@@ -40,3 +40,7 @@ readme = {file = ["README.md"]}
 
 [tool.setuptools.packages.find]
 exclude = ["samples", "tests", "azure", "azure.keyvault"]
+
+[tool.azure-sdk-build]
+pyright = false
+type_check_samples = false
