--- a/sdk/core/perf-tests.yml
+++ b/sdk/core/perf-tests.yml
@@ -24,17 +24,17 @@ Tests:
 - Test: update-entity
   Class: UpdateEntityJSONTest
   Arguments:
-  - --size 1024 --parallel 64 --duration 60 --processes 1
-  - --size 1024 --parallel 64 --duration 60 --policies all --processes 1
+  - --size 1024 --parallel 64 --duration 60
+  - --size 1024 --parallel 64 --duration 60 --policies all
 
 - Test: query-entities
   Class: QueryEntitiesJSONTest
   Arguments:
-  - --size 1024 --parallel 64 --duration 60 --processes 1
-  - --size 1024 --parallel 64 --duration 60 --policies all --processes 1
+  - --size 1024 --parallel 64 --duration 60
+  - --size 1024 --parallel 64 --duration 60 --policies all
 
 - Test: list-entities
   Class: ListEntitiesPageableTest
   Arguments:
-  - --count 500 --parallel 32 --warmup 60 --duration 60 --processes 1
-  - --count 500 --parallel 32 --warmup 60 --duration 60 --policies all --processes 1
+  - --count 500 --parallel 32 --warmup 60 --duration 60
+  - --count 500 --parallel 32 --warmup 60 --duration 60 --policies all
