--- a/.github/workflows/event.yml
+++ b/.github/workflows/event.yml
@@ -23,3 +23,16 @@ jobs:
       - uses: azure/azure-sdk-actions@main
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          jobs:
+  event-handler:
+    permissions:
+      statuses: write # to set status (azure/azure-sdk-actions)
+      pull-requests: write # to read pull requests and write comments (azure/azure-sdk-actions)
+      checks: read # to read check status (azure/azure-sdk-actions)
+    name: Handle ${{ github.event_name }} ${{ github.event.action }} event
+    runs-on: ubuntu-latest
+    steps:
+      - uses: azure/azure-sdk-actions@main
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+
