--- a/tools/azure-sdk-tools/tests/integration/scenarios/pyproject_project_def_with_extension/pyproject.toml
+++ b/tools/azure-sdk-tools/tests/integration/scenarios/pyproject_project_def_with_extension/pyproject.toml
@@ -38,6 +38,10 @@ repository = "https://github.com/Azure/azure-sdk-for-python/tree/main/sdk/keyvau
 version = {attr = "azure.keyvault.keys.__version__"}
 readme = {file = ["README.md"]}
 
+# include-package-data bit defaults to TRUE if using python -m build to assemble package
+[tool.setuptools.package-data]
+"py.typed" = ["py.typed"]
+
 [tool.setuptools.packages.find]
 exclude = ["samples", "tests", "azure", "azure.keyvault"]
 
