--- a/sdk/keyvault/azure-keyvault-keys/pyproject.toml
+++ b/sdk/keyvault/azure-keyvault-keys/pyproject.toml
@@ -29,14 +29,14 @@ dependencies = [
     "isodate>=0.6.1",
     "typing-extensions>=4.0.1"
     ]
-dynamic = ["version", "readme"]
+dynamic = ["version"]
+readme = "README.md"
 
 [project.urls]
 repository = "https://github.com/Azure/azure-sdk-for-python/tree/main/sdk/keyvault/azure-keyvault-keys"
 
 [tool.setuptools.dynamic]
 version = {attr = "azure.keyvault.keys.__version__"}
-readme = {file = ["README.md"]}
 
 [tool.setuptools.package-data]
 "py.typed" = ["py.typed"]
