--- a/tools/azure-sdk-tools/tests/integration/scenarios/pyproject_project_def_with_extension/pyproject.toml
+++ b/tools/azure-sdk-tools/tests/integration/scenarios/pyproject_project_def_with_extension/pyproject.toml
@@ -29,14 +29,14 @@ dependencies = [
     "isodate>=0.6.1",
     "typing-extensions>=4.0.1"
     ]
-dynamic = ["version", "readme"]
+dynamic = ["version"]
+readme = "README.md"
 
 [project.urls]
 repository = "https://github.com/Azure/azure-sdk-for-python/tree/main/sdk/keyvault/azure-keyvault-keys"
 
 [tool.setuptools.dynamic]
 version = {attr = "azure.keyvault.keys.__version__"}
-readme = {file = ["README.md"]}
 
 # include-package-data bit defaults to TRUE if using python -m build to assemble package
 [tool.setuptools.package-data]
