--- a/eng/pipelines/templates/steps/build-package-artifacts.yml
+++ b/eng/pipelines/templates/steps/build-package-artifacts.yml
@@ -31,13 +31,13 @@ parameters:
 # However, please note that this variable will not ALWAYS be set. If using `build-artifacts.yml`, ensure that this variable is set AT LEAST
 # to "linux", otherwise the primary tasks will not be run as expected. APIStub, Docs, etc are NOT run on machines that aren't linux.
 steps:
-  - template: /eng/common/pipelines/templates/steps/set-test-pipeline-version.yml
+  - template: /eng/common/pipelines/templates/steps/set-test-pipeline-version.yml@self
     parameters:
       PackageName: "azure-template"
       ServiceDirectory: "template"
       TestPipeline: ${{ parameters.TestPipeline }}
 
-  - template: /eng/common/pipelines/templates/steps/set-default-branch.yml
+  - template: /eng/common/pipelines/templates/steps/set-default-branch.yml@self
 
   - script: |
       echo "##vso[build.addbuildtag]Scheduled"
@@ -54,7 +54,7 @@ steps:
       python -m pip install -r eng/ci_tools.txt
     displayName: 'Prep Environment'
 
-  - template: set-dev-build.yml
+  - template: set-dev-build.yml@self
     parameters:
       ServiceDirectory: ${{ parameters.ServiceDirectory }}
 
@@ -94,12 +94,12 @@ steps:
   - ${{ parameters.BeforePublishSteps }}
 
   - ${{ if eq(parameters.ArtifactSuffix, '') }}:
-    - template: /eng/common/pipelines/templates/steps/publish-artifact.yml
+    - template: /eng/common/pipelines/templates/steps/publish-artifact.yml@self
       parameters:
         ArtifactPath: '$(Build.ArtifactStagingDirectory)'
         ArtifactName: 'packages'
 
-    - template: /eng/common/pipelines/templates/steps/publish-artifact.yml
+    - template: /eng/common/pipelines/templates/steps/publish-artifact.yml@self
       parameters:
         ArtifactPath: '$(Build.SourcesDirectory)/.logs'
         ArtifactName: 'build_logs'
@@ -111,18 +111,18 @@ steps:
         inputs:
           BuildDropPath: $(Build.ArtifactStagingDirectory)
 
-      - template: /eng/common/pipelines/templates/steps/publish-artifact.yml
+      - template: /eng/common/pipelines/templates/steps/publish-artifact.yml@self
         parameters:
           ArtifactPath: '$(Build.ArtifactStagingDirectory)/_manifest'
           ArtifactName: 'packages_manifest'
 
   - ${{ if ne(parameters.ArtifactSuffix, '') }}:
-    - template: /eng/common/pipelines/templates/steps/publish-artifact.yml
+    - template: /eng/common/pipelines/templates/steps/publish-artifact.yml@self
       parameters:
         ArtifactPath: '$(Build.ArtifactStagingDirectory)'
         ArtifactName: 'packages_${{ parameters.ArtifactSuffix }}'
 
-    - template: /eng/common/pipelines/templates/steps/publish-artifact.yml
+    - template: /eng/common/pipelines/templates/steps/publish-artifact.yml@self
       parameters:
         ArtifactPath: '$(Build.SourcesDirectory)/.logs'
         ArtifactName: 'build_logs_${{ parameters.ArtifactSuffix }}'
