--- a/sdk/ml/azure-ai-ml/pyproject.toml
+++ b/sdk/ml/azure-ai-ml/pyproject.toml
@@ -26,6 +26,7 @@ exclude = [
   "azure/ai/ml/_vendor/",
   "azure/ai/ml/_schema/",
   "azure/ai/ml/_arm_deployments/",
+  "azure/ai/ml/_utils/_virtual_cluster_utils/__init__.py",
   "tests",
   "setup.py",
   "samples",
