--- a/eng/common/pipelines/templates/steps/publish-artifact.yml
+++ b/eng/common/pipelines/templates/steps/publish-artifact.yml
@@ -12,16 +12,16 @@ parameters:
   CustomCondition: true
 
 steps:
-  - task: PublishPipelineArtifact@1
+  - task: 1ES.PublishBuildArtifacts@1
     condition: and(succeeded(), ${{ parameters.CustomCondition }})
     displayName: 'Publish ${{ parameters.ArtifactName }} Artifacts'
     inputs:
-      artifactName: '${{ parameters.ArtifactName }}'
-      path: '${{ parameters.ArtifactPath }}'
+      ArtifactName: '${{ parameters.ArtifactName }}'
+      PathToPublish: '${{ parameters.ArtifactPath }}'
 
-  - task: PublishPipelineArtifact@1
+  - task: 1ES.PublishBuildArtifacts@1
     condition: and(failed(), ${{ parameters.CustomCondition }})
     displayName: 'Publish failed ${{ parameters.ArtifactName }} Artifacts'
     inputs:
-      artifactName: '${{ parameters.ArtifactName }}-FailedAttempt$(System.JobAttempt)'
-      path: '${{ parameters.ArtifactPath }}'
+      ArtifactName: '${{ parameters.ArtifactName }}-FailedAttempt$(System.JobAttempt)'
+      PathToPublish: '${{ parameters.ArtifactPath }}'
