--- a/eng/common/TestResources/build-test-resource-config.yml
+++ b/eng/common/TestResources/build-test-resource-config.yml
@@ -13,6 +13,9 @@ parameters:
 steps:
   - ${{ if parameters.SubscriptionConfiguration }}:
     - pwsh: |
+        Write-Host ${{ parameters.SubscriptionConfiguration }}
+      displayName: Display SubscriptionConfiguration variable
+    - pwsh: |
         $config = @'
           ${{ parameters.SubscriptionConfiguration }}
         '@ | ConvertFrom-Json -AsHashtable
