--- a/sdk/ml/azure-ai-ml/pyproject.toml
+++ b/sdk/ml/azure-ai-ml/pyproject.toml
@@ -27,6 +27,7 @@ exclude = [
   "azure/ai/ml/_schema/",
   "azure/ai/ml/_arm_deployments/",
   "azure/ai/ml/_utils/_virtual_cluster_utils/__init__.py",
+  "azure/ai/ml/_artifacts/_fileshare_storage_helper.py",
   "tests",
   "setup.py",
   "samples",
