adjust the directory

--- a/eng/pipelines/templates/steps/build-package-artifacts.yml
+++ b/eng/pipelines/templates/steps/build-package-artifacts.yml
@@ -80,6 +80,7 @@ steps:
   - pwsh: |
       python sdk/core/azure-core/setup.py bdist_wheel --dist-dir $(Build.ArtifactStagingDirectory)
     displayName: "fake build"
+    workingDirectory: $(Build.SourcesDirectory)/sdk/core/azure-core
 
   - pwsh: |
       sdk_build -d "$(Build.ArtifactStagingDirectory)" "$(TargetingString)" --service=${{parameters.ServiceDirectory}} --inactive
