--- a/eng/pipelines/templates/steps/build-package-artifacts.yml
+++ b/eng/pipelines/templates/steps/build-package-artifacts.yml
@@ -78,7 +78,7 @@ steps:
     condition: and(succeeded(), eq(variables['Agent.OS'], 'Linux'))
 
   - pwsh: |
-      python sdk/core/azure-core/setup.py bdist_wheel --dist-dir $(Build.ArtifactStagingDirectory)
+      python setup.py bdist_wheel --dist-dir $(Build.ArtifactStagingDirectory)
     displayName: "fake build"
     workingDirectory: $(Build.SourcesDirectory)/sdk/core/azure-core
 
