--- a/eng/pipelines/templates/steps/targeting-string-resolve.yml
+++ b/eng/pipelines/templates/steps/targeting-string-resolve.yml
@@ -7,9 +7,15 @@ steps:
   - pwsh: |
       $setting = "${{ parameters.BuildTargetingString }}"
 
+      Write-Host "The parameterized value is ${{ parameters.BuildTargetingString }}"
+
       # if the variable is not set, it'll just come back as the variable name. otherwise it's set.
       if ('$(BuildTargetingString)' -ne ('$' + '(BuildTargetingString)')) {
+          Write-Host "The variable named BuildTargetingString is set to $(BuildTargetingString)"
           $setting = "$(BuildTargetingString)"
+      }
+      else {
+        Write-Host "We are falling back to the parameter value ${{ parameters.BuildTargetingString }}"
       }
 
       Write-Host "Setting TargetingString to $setting"
